# Visao-computacional-Ros

./: README.md  testar_pipeline.py
pipeline_visao/: __init__.py  detector_bordas.py  mapeamento.py  processamento.py
turtle_draw_ws/install/: local_setup.sh  setup.sh
turtle_draw_ws/install/turtle_commander/share/turtle_commander/: package.dsv  package.ps1  package.sh
turtle_draw_ws/log/: latest_build
turtle_draw_ws/src/turtle_commander/: package.xml  setup.py
turtle_draw_ws/src/turtle_commander/scripts/: drawer_node
turtle_draw_ws/src/turtle_commander/turtle_commander/: drawer_node.py
