<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_commander</name>
  <version>0.0.0</version>
  <description>Pacote Turtle Draw Ponderada</description>
  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>